src/styles/panel.scss
.Layer__panel {
  display: flex;
  flex: 1;
  align-items: flex-start;
  height: 100%;
}

.Layer__panel__content {
  display: flex;
  flex: 1;
  flex-direction: column;
  width: 100%;
  padding-bottom: var(--spacing-lg);
}

.Layer__panel.Layer__panel--open {
  .Layer__panel__content {
    width: calc(100% - 480px);
    border-right: 1px solid var(--color-base-300);
  }
}

.Layer__panel .Layer__panel__content .Layer__component-header {
  z-index: auto;
  top: 0;
  border-top-left-radius: var(--border-radius-sm);
  border-top-right-radius: var(--border-radius-sm);
  background: rgb(255 255 255 / 50%);
  backdrop-filter: blur(6px);
}

.Layer__panel__sidebar {
  position: sticky;
  z-index: 102;
  top: 0;
  overflow-x: hidden;
  height: 100%;
  max-height: 0;
  width: 480px;
  max-width: 0;
  border-top-right-radius: var(--border-radius-sm);
  border-left: 1px solid var(--color-base-300);
  background: var(--color-base-0);
  transition: max-width 180ms ease-in-out;

  .Layer__panel__sidebar-content {
    height: 100%;
    width: 480px;
    min-width: 480px;
    background: var(--color-base-0);
    opacity: 0.2;
    transition: opacity 180ms ease-in-out;
  }
}

.Layer__panel__sidebar--default {
  flex: 1;
  width: 100%;
  max-width: none;

  .Layer__panel__sidebar-content {
    width: 100%;
  }
}

.Layer__panel.Layer__panel--open .Layer__panel__sidebar {
  max-height: none;
  max-width: 480px;
  margin-left: -1px;

  .Layer__panel__sidebar-content {
    opacity: 1;
  }
}

@container (min-width: 1025px) {
  .Layer__panel__sidebar.Layer__panel__sidebar--floating {
    position: absolute;
    top: 0;
    right: 0;
  }
}

@container (max-width: 1024px) {
  .Layer__panel__sidebar {
    position: absolute;
    width: 100%;
    max-width: 100%;
    border-radius: var(--border-radius-sm);
    border-width: 0;
    opacity: 0.2;
    transform: translateY(-50px) scale(0.96);
    transition:
      transform 120ms ease-in-out,
      opacity 120ms ease-in-out;

    .Layer__panel__sidebar-content {
      position: sticky;
      top: 0;
      height: min-content;
    }
  }

  .Layer__panel--open .Layer__panel__sidebar {
    overflow: unset;
  }

  .Layer__panel.Layer__panel--open .Layer__panel__sidebar {
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    max-height: 100%;
    width: 100%;
    max-width: 100%;
    margin-left: 0;
    opacity: 1;
    transform: translateY(0) scale(1);
  }

  .Layer__panel.Layer__panel--open {
    .Layer__panel__content {
      width: 100%;
    }
  }
}

